--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
+    <img src="./faq.png" alt="logo" width="500" height="600">
     <!-- start Quiz button -->
     <div class="start_btn"><button>Start Quiz</button></div>
 
