--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Created By CodingNepal - www.codingnepalweb.com  -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
-    <img style= "display:flex; align-item:center; justify-content:center" src="./faq.png" alt="logo">
+    <div style= "display:flex; align-item:center; justify-content:center" >
+    <img src="./faq.png" alt="logo">
     <!-- start Quiz button -->
     <div class="start_btn"><button>Start Quiz</button></div>
+    </div>
 
     <!-- Info Box -->
     <div class="info_box">
